# ── repo-graph-rgr ─────────────────────────────────────────────────
#
# Minimal Rust CLI entry point. Outermost layer — depends on
# everything, nothing depends on it.
#
# Commands (accumulated by slice):
#   Rust-7B: `index   <repo_path> <db_path>`
#   Rust-8:  `trust   <db_path> <repo_uid>`
#   Rust-9:  `refresh <repo_path> <db_path>`
#   Rust-10: `callers <db_path> <repo_uid> <symbol>`
#   Rust-11: `callees <db_path> <repo_uid> <symbol>`
#   Rust-12: `dead    <db_path> <repo_uid> [kind]`
#   Rust-13: `cycles  <db_path> <repo_uid>`
#   Rust-14: `stats   <db_path> <repo_uid>`
#
# Rust-15: QueryResult envelope standardization across all read commands.
# Rust-16: Consolidation — docs, tech-debt register, contract tests, interop expansion.
# Rust-17: --edge-types filter for callers/callees (CALLS, INSTANTIATES).
# Rust-18: `imports <db_path> <repo_uid> <file_path>`
# Rust-19: `path    <db_path> <repo_uid> <from> <to>`
# Rust-20: Interop hardening — cross-runtime proof for all graph query surfaces.
# Rust-22: `violations <db_path> <repo_uid>` (first governance command).
# Rust-24: `gate <db_path> <repo_uid>` (narrow: arch_violations only, default mode).
# Rust-25: gate waiver overlay (active waiver resolution, expiry, audit trail).
# Rust-26: gate modes (--strict, --advisory, default).
# Rust-28: coverage_threshold gate method (reads line_coverage measurements).
# Rust-29: complexity_threshold gate method (reads cyclomatic_complexity measurements).
# Rust-31: hotspot_threshold gate method (reads hotspot_score inferences).
# Rust-33: declare boundary CLI command (first governance write path).
# Rust-34: declare requirement CLI command.
# Rust-35: declare waiver CLI command.
# Rust-36: declare deactivate CLI command.
# Rust-38: declare supersede boundary CLI command.
# Rust-39: declare supersede requirement CLI command.
# Rust-40: declare supersede waiver CLI command.
# Rust-43A: gate policy relocated into repo-graph-gate (separate crate).
# Rust-43B: `orient <db_path> <repo_uid> [--budget ...] [--focus ...]`
#           First exposure of the agent orientation surface.
#           Uses <db_path> <repo_uid> positional pair to match the
#           existing Rust CLI shape. Repo-name invocation is deferred
#           to the rename/registry slice (Rust-43C+).
# Rust-44:  `check <db_path> <repo_uid>`
#           Pre-action trust/safety check. Exit codes map to
#           verdict: 0 = pass, 1 = fail, 2 = incomplete.
# RS-MS-2:  `churn <db_path> <repo_uid> [--since <expr>]`
#           Query-time per-file git churn for indexed files.
#           Default window: 90.days.ago. No persistence.
#           Git is the authoritative history source.
# RS-MG-5:  `modules deps <db_path> <repo_uid> [module] [--outbound|--inbound]`
#           Cross-module dependency edges from discovered modules.
#           Consumes module_candidates + module_file_ownership from TS indexer.
# RS-MG-6:  `modules violations <db_path> <repo_uid>`
#           Discovered-module boundary violation check.
#           Exit 0: no violations, Exit 1: violations, Exit 2: runtime error.
#           Stale declarations do not force exit 1.
# RS-MG-7:  `modules boundary <db_path> <repo_uid> <source> --forbids <target> [--reason <text>]`
#           Declare discovered-module boundary from Rust CLI.
#           Exact resolution by canonicalRootPath or moduleKey.
#           Completes Rust write path for module governance.
# RS-MG-8:  `module_violations` gate method.
#           Evaluates discovered-module boundaries via gate policy layer.
#           Uses RS-MG-1 through RS-MG-4 support modules for evaluation.
#           Always repo-wide (target field on obligation is ignored).
#           PASS = 0 violations, FAIL = >0 violations.
#           Stale declarations are informational only (do not cause FAIL).
#           Waivable like other gate methods.
# RS-MG-9:  `modules list <db_path> <repo_uid>`
#           Module catalog surface. Lists all discovered modules for a repo.
#           Sorted by canonical_root_path. No rollups (file counts, evidence).
# RS-MG-10: Integrate discovered-module policy into `rmap violations`.
#           Output now includes two sections:
#             - declared_boundary_violations (legacy directory boundaries)
#             - discovered_module_violations (discovered-module boundaries)
#           Counts: declared_boundary_count, discovered_module_count, stale_count.
#           stale_declarations are informational only.
#           Exit semantics unchanged (always 0 on success).
# RS-MG-11: `modules files <db_path> <repo_uid> <module>`
#           File ownership surface. Lists files owned by a specific module.
#           Module resolution: canonical_root_path exact → module_key exact → error.
#           Output: file_uid, path, language, assignment_kind, confidence.
#           Sorted by path. Standard envelope with module identity in extras.
# RS-MG-13b: `modules show <db_path> <repo_uid> <module>`
#           Module briefing surface. Single-module drill-down with:
#           - module identity (uid, key, path, kind, display_name, confidence)
#           - rollups (same as modules list)
#           - weighted outbound_dependencies (module identity + import_count + source_file_count)
#           - weighted inbound_dependencies
#           - inline source-side violations with target identity
#           Resolution: canonical_root_path exact → module_key exact → exit 1.
#           Same degradation contract as modules list.
#           Consumes RS-MG-13a weighted_neighbors support from classification crate.
#
# No formatting-heavy UX.

[package]
name         = "repo-graph-rgr"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.93.0"
license      = "MIT"
description  = "Minimal CLI (rmap) for repo-graph indexing, trust, and graph queries"
publish      = false

[[bin]]
name = "rmap"
path = "src/main.rs"

[dependencies]
repo-graph-agent = { path = "../agent" }
repo-graph-classification = { path = "../classification" }
repo-graph-gate = { path = "../gate" }
repo-graph-git = { path = "../git" }
repo-graph-repo-index = { path = "../repo-index" }
repo-graph-storage = { path = "../storage" }
repo-graph-trust = { path = "../trust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
