# ── repo-graph-storage ────────────────────────────────────────────
#
# Rust port of the SQLite storage substrate. Mirror of the
# TypeScript adapter at `src/adapters/storage/sqlite/` and the
# storage port at `src/core/ports/storage.ts`.
#
# Slice scope (Rust-2 storage substrate, locked):
#   - port all 16 schema migrations (001 through 016) as the
#     Rust-side migration boundary
#   - implement read/write CRUD parity for the D4-Core entity
#     set: repos, snapshots, files, file_versions, nodes, edges
#   - mirror the file_versions behavioral surface explicitly:
#     upsertFileVersions, getStaleFiles, queryFileVersionHashes
#   - prove byte-structural cross-runtime parity against a
#     curated `storage-parity-fixtures/` corpus shared between
#     the TS and Rust runtimes
#   - expose the standard public API:
#       open(path) -> Result<StorageConnection>
#       (CRUD methods on StorageConnection per the 6 entities)
#
# NOT in scope (explicit deferrals from R2 lock):
#   - CRUD for entities outside D4-Core (declarations, modules,
#     measurements, annotations, obligations, surfaces,
#     env_dependencies, fs_mutations, etc.)
#   - file_versions methods outside the locked surface
#     (copyForwardUnchangedFiles is excluded; extraction_edges
#     and file_signals are out of scope)
#   - cross-runtime DB-file interoperability (deferred future
#     work; was D11, removed from contract during R2 lock to
#     avoid the overclaim pattern)
#   - TS-side migration source-of-truth refactor
#   - Postgres backend
#   - replacing better-sqlite3 in TS
#   - indexer / daemon / classification / trust / extractors port
#
# Operating model: O-C zipper. The TS implementation defines or
# refines the storage contract; this Rust crate ports it; parity
# is verified before the next contract-changing TS slice. Same
# discipline as the Rust-1 detector parity slice.
#
# Parity surface: `storage-parity-fixtures/` at the repo root will
# contain the curated cross-runtime contract test corpus (added
# in R2-F). Both this crate and the TS test harness consume the
# same fixtures.

[package]
name         = "repo-graph-storage"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.93.0"
license      = "MIT"
description  = "Rust port of the repo-graph SQLite storage substrate"
publish      = false

[dependencies]
# rusqlite — the canonical Rust binding to libsqlite3. Sync API,
# matches the TypeScript better-sqlite3 shape on the TS side.
#
# `bundled` feature: compiles libsqlite3 from source as part of the
# build (via the libsqlite3-sys crate). The Rust binary statically
# links a known libsqlite3 version, eliminating the entire
# "different machines have different libsqlite3 versions" axis from
# parity drift. This matches the TS side's bundling philosophy
# (better-sqlite3 also bundles its libsqlite3). Locked at R2 D1a.
#
# Cost: ~30s first-build to compile libsqlite3, then cached. ~1MB
# extra static link. Requires a C compiler on the build machine.
# These are build-mechanism costs, not contract-surface risks.
#
# Version pinning is stricter than typical Rust deps because
# rusqlite's API is more volatile across minor versions than
# average crates. Bump deliberately when a parity test against
# the new minor version is added to R2-F's harness.
rusqlite = { version = "0.31", features = ["bundled"] }

# Serde for hand-rolled DTO derives. Used by the parity boundary
# (R2-F) to serialize entity rows to JSON for cross-runtime
# structural comparison. Hand-rolled row mappers (D5) handle the
# rusqlite::Row -> DTO direction; serde handles the DTO -> JSON
# direction at the parity boundary only.
serde      = { version = "1", features = ["derive"] }

# serde_json for the parity boundary's JSON I/O surface (R2-F
# fixture parsing and structural comparison output) AND for
# migration 004's dynamic JSON manipulation (parses requirement
# `value_json`, validates structure, backfills `obligation_id`,
# re-serializes).
#
# `preserve_order` feature: switches the underlying Map type from
# `BTreeMap` (alphabetical key order) to `IndexMap` (insertion
# order). Required for migration 004 parity: TypeScript's
# `JSON.stringify` preserves object property insertion order.
# Without `preserve_order`, Rust would re-serialize the same data
# with alphabetized keys, which is semantically equivalent but
# byte-different from the TS output and would cause spurious
# parity failures at the storage value_json column. The feature
# does NOT affect R2-B's struct-based DTOs (those use field
# declaration order regardless of map type).
serde_json = { version = "1", features = ["preserve_order"] }

# Typed error enum for storage operations. Matches the Rust-1
# detector crate's pattern (DetectorLoadError) and the broader
# Rust ecosystem convention for substrate libraries that expose
# typed failure modes to upstream crates.
thiserror = "2"

# UUID generation for storage identity surfaces.
#
# v4 (random): migration 004's obligation_id backfill. The TS
# migration calls `randomUUID()` from node:crypto, which returns
# RFC 4122 v4 UUIDs. Locked at R2-C decision D-C2: must match the
# TS UUID format because the backfilled IDs become permanent
# identifiers in the database, used as reference targets by waiver
# declarations.
#
# v5 (deterministic): semantic_facts.fact_uid derivation. Uses a
# fixed namespace UUID and hashes the semantic identity tuple
# (repo_uid, fact_kind, refs, location, doc_kind) to produce
# stable IDs across extraction runs. Enables idempotent replace
# semantics for `rmap docs`.
uuid = { version = "1", features = ["v4", "v5"] }

# Classification crate — needed for SourceLocation type used in
# ExtractedNode.location when implementing NodeStorePort (R5-F).
# Already a transitive dep through trust → classification.
repo-graph-classification = { path = "../classification" }

# Trust crate — added in R4-E so the storage crate (adapter) can
# implement the TrustStorageRead trait defined by the trust crate
# (policy). Dependency direction: adapter → policy (outer → inner),
# which follows the Clean Architecture dependency rule.
#
# The storage crate imports only the TrustStorageRead trait plus
# its supporting DTOs (TrustModuleStats, PathPrefixModuleCycle,
# ClassificationCountRow, TrustUnresolvedEdgeSample, etc.).
# It does NOT import trust rules, trust types, or TrustReport.
repo-graph-trust = { path = "../trust" }

# Indexer crate — added in R5-C so the storage crate (adapter) can
# implement the indexer-owned storage sub-traits
# (SnapshotLifecyclePort, FileCatalogPort, etc.). Same dependency
# direction: adapter → policy (outer → inner).
repo-graph-indexer = { path = "../indexer" }

# Agent crate — added in Rust-42 so the storage crate (adapter)
# can implement the AgentStorageRead trait defined by the agent
# crate (policy). Same dependency direction: adapter → policy
# (outer → inner). The storage adapter also uses its existing
# trust dependency internally to assemble the trust summary
# projection consumed by `get_trust_summary`.
repo-graph-agent = { path = "../agent" }

# Gate crate — added in Rust-43A so the storage crate (adapter)
# can implement the GateStorageRead trait defined by the gate
# crate (policy). Same dependency direction: adapter → policy.
# The `rgr` binary crate also depends on repo-graph-gate for
# its `gate` CLI command, which calls `repo_graph_gate::assemble`
# through the StorageConnection implementation added here.
repo-graph-gate = { path = "../gate" }

# Doc-facts crate — added for the docs-primary pivot. The storage
# adapter's `get_doc_inventory` method calls
# `discover_doc_inventory(repo_path, false)` to perform live
# filesystem discovery of documentation files. The agent crate
# does not access the filesystem directly; the storage adapter
# handles the boundary crossing.
repo-graph-doc-facts = { path = "../doc-facts" }

# Policy-facts crate — added for PF-1 STATUS_MAPPING slice. The
# storage adapter implements the PolicyFactsStorageRead/Write traits
# defined by the policy-facts crate.
repo-graph-policy-facts = { path = "../policy-facts" }

[dev-dependencies]
# tempfile for tests that need a real file-backed SQLite database
# in a unique temporary path. Added in R2-D when the connection
# lifecycle tests need file-backed mode (not just in-memory) to
# verify open + close + re-open semantics. Also used by R2-E's
# integration tests where appropriate.
#
# Cleanup is automatic via Drop on the tempfile handle when the
# test ends. No manual cleanup code needed.
tempfile = "3"

# The agent crate is already a normal dependency of this crate
# for the AgentStorageRead impl. It is also listed here only so
# that integration tests (under `tests/`) can import it by name;
# this is a no-op for production builds but clarifies intent.
repo-graph-agent = { path = "../agent" }

# (R2-F may add walkdir for parity-fixture corpus discovery,
# mirroring the detector crate's dev-dep pattern. Added per
# substep when first needed.)
