# ── repo-graph-ts-extractor ────────────────────────────────────────
#
# Concrete ExtractorPort adapter for TypeScript, TSX, JavaScript,
# and JSX files using native tree-sitter.
#
# Slice scope (Rust-6):
#   - Implements ExtractorPort from repo-graph-indexer
#   - Uses tree-sitter-typescript grammars (TS + TSX)
#   - Produces ExtractedNode, ExtractedEdge, ImportBinding, metrics
#   - Advertises languages: ["typescript", "tsx", "javascript", "jsx"]
#   - Grammar selection: TS grammar for .ts/.js, TSX grammar for .tsx/.jsx
#
# Architecture:
#   - This crate is an OUTER-LAYER ADAPTER. It depends on the
#     indexer policy crate's ExtractorPort trait and DTOs.
#   - Does NOT depend on storage, classification, or trust.
#   - Owns grammar loading, parser lifecycle, and syntax-tree traversal.
#
# NOT in scope:
#   - Framework-specific extractors (Express routes, HTTP client, Commander)
#   - File-local string resolver
#   - Enum member nodes
#   - Specifier-level import type detection

[package]
name         = "repo-graph-ts-extractor"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.93.0"
license      = "MIT"
description  = "TypeScript/TSX tree-sitter extractor for repo-graph"
publish      = false

[dependencies]
# Indexer crate — for ExtractorPort, ExtractedNode, ExtractedEdge,
# ExtractedMetrics, ExtractionResult, domain enums.
repo-graph-indexer = { path = "../indexer" }

# Classification crate — for ImportBinding, RuntimeBuiltinsSet,
# SourceLocation types used in ExtractorPort interface.
repo-graph-classification = { path = "../classification" }

# tree-sitter — native Rust binding. No WASM, no runtime grammar
# loading. Grammars compiled as C libraries, linked statically.
tree-sitter = "0.24"

# tree-sitter-typescript — provides both TypeScript and TSX grammars.
tree-sitter-typescript = "0.23"

# Serde for metadata JSON serialization.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# UUID v4 for node/edge UID generation.
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
walkdir = "2"
